[package]
name = "png"
version = "0.1.0"
edition = "2024"

[lints]
rust.unsafe_code = "forbid"
clippy.all = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"

[dependencies]
anyhow = "1.0.98"
binrw = "0.15.0"
clap = { version = "4.5.43", features = ["derive"] }
i256 = { version = "0.2.2", features = ["i1024"] }
image = "0.25.6"
pixels = "0.15.0"
winit = "0.30.12"
